<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/backgroundColor">

    <!-- Circle Image -->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="169dp"
        android:layout_height="170dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/circle_background"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profilephoto" />

    <TextView
        android:id="@+id/aboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/primaryColor"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textStudentID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textSize="16sp"
        android:textColor="@color/textPrimary"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textSize="16sp"
        android:textColor="@color/textSecondary"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/textGitHub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_url"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="16sp"
        android:autoLink="web"
        android:textStyle="bold"
        android:textIsSelectable="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

</LinearLayout>
